Reorganizing My-portfoliyo

--- a/index.html
+++ b/index.html
@@ -11,187 +11,75 @@
         <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 minimum scale=1 user-scalable=no" >
         <meta name="theme-color" content="blue">
         <link rel="stylesheet" href="asserts/CSS/stylesheet.css">
+        <link rel="stylesheet" href="asserts/CSS/normalize.css">
         <link rel="stylesheet" href="asserts/fonts/css/all.min.css">
     </head>
     <body>
-        <header class="hedinSect">
-            <img src="asserts/imges/MyLogo.png" id="uplogo">
-            <aside>
-                <nav>
-                    <a href="#aboutme"><i class="fa-solid fa-address-card"></i>About Me</a>
-                    <a href="#skils">Skils</a>
-                    <a href="#services"><i class="fa-solid fa-earth-asia"></i>Services</a>
-                    <a href="#activities">Activities</a>
-                    <a href="#gallery"><i class="fa-solid fa-images"></i>Gallery</a>
-                    <a href="#contactme"><i class="fa-solid fa-headphones"></i>Contact Me</a>
-                </nav>
-            </aside>
-        </header>
-        <main>
-            <section style="height: 10%;width: 100%" id="cover">
-                <img src="asserts/imges/Full%20_Cover.png" alt="Cover Photo" height="100%" width="100%">
-                <hr>
-            </section>
+    <header>
+        <img src="asserts/imges/MyLogo.png">
+        <nav>
+            <ul>
+                <li><a href="#aboutme"><i class="fa-solid fa-address-card"></i>About Me</a></li>
+                <li><a href="#skill"><i class="fas fa-brain"></i>Skill</a></li>
+                <li><a href="#services"><i class="fa-solid fa-earth-asia"></i>Services</a></li>
+                <li><a href="#activities"><i class="fas fa-chart-line"></i>Activities</a></li>
+                <li><a href="#gallery"><i class="fa-solid fa-images"></i>Gallery</a></li>
+                <li><a href="#contactMe"><i class="fa-solid fa-headphones"></i>Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <img src="asserts/imges/Full%20_Cover.png">
+        </section>
+        <section>
+            <header>
+                <h1 id="aboutme">About Me..</h1>
+            </header>
             <section>
-                <section class="hedinSect" >
-                    <h1><dfn id="aboutme">About Me</dfn></h1>
-                </section>
-                    <p id="hey">
-                        hey There !,
+                <p><b><i>Hey There..</i></b></p>
+                <article>
+                    <p>
+                        I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank">IJSE</a>.
+                        I look forward to becoming a full stack softwere developer in a few more years.<br>
+                        Now I started my journey for it.
+                        I have some knowledge about <b>java,mySQL,<abbr title="Object-oriented programming">OOP</abbr></b> Concepts.
+                        I can also use new technologies like <b>Hibernate</b>.<br>
+                        I can create websites and webpages using <b><abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript</b>.
                     </p>
-                    <p id="AbMe">
-                            I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank"><abbr title="(Intitue of Java Softwere Engineering)"><b><em>IJSE</em></b></abbr></a>.
-                            I look forward to becoming a full stack softwere developer in a few more years.
-                            Now I started my journey for it.I have some knowledge about <b>java,mySQL</b>,<abbr title="Object-oriented programming"><b>OOP</b></abbr> Concepts.
-                            I can also use new technologies like Hibernate.I can create websites and webpages using <abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript
-                    </p>
-                <hr>
+                </article>
             </section>
             <section>
-                <section class="hedinSect">
-                    <h1><dfn id="skils">Skils</dfn></h1>
-                </section>
-                <center>
-                    <table width="100%">
-                        <tbody>
-                            <tr >
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/java.png" height="70%" width="75%">
-                                    <p>Java</p>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/MySql.png" height="70%" width="75%">
-                                    <p>mySQL</p>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/HTML.png" height="70%" width="60%">
-                                    <p>HTML</p>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/CSS.png" height="70%" width="60%">
-                                    <p>CSS</p>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/javascript.png" height="70%" width="60%">
-                                    <p>javascript</p>
-                                </th>
-                            </tr>
-                            <tr>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/intellij-idea.png" height="70%" width="70%">
-                                    <center><p>Intellij-idea</p></center>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/hibernete.jpg" height="75%" width="75%">
-                                    <center><p>Hibernete</p></center>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/figma%20Logo.png" height="70%" width="75%">
-                                    <center><p>Figma</p></center>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/GitHub-Logo.png" height="35%" width="35%">
-                                    <center><p>GitHub</p></center>
-                                </th>
-                                <th width="20%" height="50%">
-                                    <img src="asserts/imges/Gimp.png" height="70%" width="75%">
-                                    <center><p>Gimp Editer</p></center>
-                                </th>
-                            </tr>
-                        </tbody>
-                    </table>
-                </center>
-                <hr>
+                <header>
+                    <h1 id="skill">Skill..</h1>
+                </header>
+                <section></section>
             </section>
             <section>
-                <section class="hedinSect">
-                    <h1><dfn id="services"> Services</dfn></h1>
-                </section>
-                <section>
-                    <center>
-                        <table width="100%">
-                            <tbody>
-                                <tr>
-                                    <th>
-                                        <img src="asserts/imges/service1.png" height="50%" width="65%">
-                                    </th>
-                                    <th>
-                                        <img src="asserts/imges/Service2.png" height="50%" width="65%">
-                                    </th>
-                                    <th>
-                                        <img src="asserts/imges/service3.png" height="50%" width="65%">
-                                    </th>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </center>
-                </section>
-                <hr>
+                <header>
+                    <h1 id="services">Services..</h1>
+                </header>
+                <section></section>
             </section>
             <section>
-                <section class="hedinSect">
-                    <h1><dfn id="activities">Activities</dfn></h1>
-                </section>
-                <section>
-                    <object type="application/pdf" data="asserts/pdf/Assignment%2002.pdf" height="500" width="500"></object>
-                </section>
-                <hr>
+                <header>
+                    <h1 id="activities">Activities..</h1>
+                </header>
+                <section></section>
             </section>
             <section>
-                <section class="hedinSect">
-                    <h1><dfn id="gallery">Gallery</dfn></h1>
-                </section>
-                <section>
-
-                </section>
-                <hr>
+                <header>
+                    <h1 id="gallery">Gallery..</h1>
+                </header>
+                <section></section>
             </section>
             <section>
-                <section class="hedinSect">
-                    <h1><dfn id="contactme">Contact Me</dfn></h1>
-                </section>
-                <section class="footset">
-                            <img src="asserts/imges/post-box.png" id="post">
-                            <p>103/2, Pinhena Colony, Padagoda, Beruwala, Kaluthra, Sri Lanka.</p>
-                    <table width="10%">
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <a href="tel:+940754313114"><img src="asserts/imges/teli.png" height="100%" width="100%%"></a>
-                                </td>
-                                <td>
-                                    <a href="mailto:superdilshan999@gmail.com"><img src="asserts/imges/email_gmail.png " height="100%" width="100%"></a>
-                                </td>
-                                <td>
-                                    <a href=""></a>
-                                </td>
-                                <td>
-                                    <a href=""> </a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <a href="tel:+940754313114"><img src="asserts/imges/teli.png" height="100%" width="100%%"></a>
-                                </td>
-                                <td>
-                                    <a href="mailto:superdilshan999@gmail.com"><img src="asserts/imges/email_gmail.png " height="100%" width="100%"></a>
-                                </td>
-                                <td>
-                                    <a href=""></a>
-                                </td>
-                                <td>
-                                    <a href=""> </a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </section>
-                <hr>
+                <header>
+                    <h1 id="contactMe">Contact Me..</h1>
+                </header>
+                <section></section>
             </section>
-            <a href=""><div></i></div></a>
-        </main>
-        <footer class="hedinSect">
-            <img src="asserts/imges/MyLogo.png" width="3%" height="3%">
-        </footer>
+        </section>
+    </main>
     </body>
 </html>
