--- a/assigments/CSS/case_2/case_2.html
+++ b/assigments/CSS/case_2/case_2.html
@@ -78,7 +78,7 @@
             height: 100%;
             width: calc(100% / 3);
             position: absolute;
-            border: 1px solid rgba(0, 0, 0, 0.33);
+            border: 1px solid black;
         }
         main>section>section:nth-child(2)>article>p:nth-child(1){
             margin-top: 18px;
