--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="asserts/fonts/css/all.min.css">
     </head>
     <body>
-    <header>
+    <header id="heder">
         <img src="asserts/imges/MyLogo.png">
         <nav>
             <ul>
@@ -34,52 +34,94 @@
         </section>
         <section>
             <header>
-                <h1 id="aboutme">About Me..</h1>
+                <h1 id="aboutme">About Me <i class="fa-solid fa-address-card"></i></h1>
             </header>
-            <section>
-                <p><b><i>Hey There..</i></b></p>
-                <article>
-                    <p>
-                        I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank">IJSE</a>.
-                        I look forward to becoming a full stack softwere developer in a few more years.<br>
-                        Now I started my journey for it.
-                        I have some knowledge about <b>java,mySQL,<abbr title="Object-oriented programming">OOP</abbr></b> Concepts.
-                        I can also use new technologies like <b>Hibernate</b>.<br>
-                        I can create websites and webpages using <b><abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript</b>.
+            <p><b><i>Hey There..</i></b></p>
+            <article>
+                <p>
+                    I'm Chathuranga Dilshan, I'm a student of <a href="https://www.ijse.lk/" target="_blank">IJSE</a>.
+                    I look forward to becoming a full stack softwere developer in a few more years.<br>
+                    Now I started my journey for it.
+                    I have some knowledge about <b>java,mySQL,<abbr title="Object-oriented programming">OOP</abbr></b> Concepts.
+                    I can also use new technologies like <b>Hibernate</b>.<br>
+                    I can create websites and webpages using <b><abbr title="Hypertext Markup Language">HTML</abbr>,<abbr title="Cascading Style Sheets">CSS</abbr>,javaScript</b>.
                     </p>
                 </article>
-            </section>
-            <section>
-                <header>
-                    <h1 id="skill">Skill..</h1>
-                </header>
-                <section></section>
-            </section>
-            <section>
-                <header>
-                    <h1 id="services">Services..</h1>
-                </header>
-                <section></section>
-            </section>
-            <section>
-                <header>
-                    <h1 id="activities">Activities..</h1>
-                </header>
-                <section></section>
-            </section>
-            <section>
-                <header>
-                    <h1 id="gallery">Gallery..</h1>
-                </header>
-                <section></section>
-            </section>
-            <section>
-                <header>
-                    <h1 id="contactMe">Contact Me..</h1>
-                </header>
-                <section></section>
-            </section>
         </section>
+        <section>
+            <header>
+                <h1 id="skill">Skill <i class="fas fa-brain"></i></h1>
+            </header>
+                <section>
+                    <div>
+                        <img src="asserts/imges/java.png" rel="Java Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/MySql.png" rel="mySQL Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/HTML.png" rel="HTML Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/CSS.png" rel="CSS Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/intellij-idea.png" rel="intellij-idea Logo">
+                    </div>
+                </section>
+                <section>
+                    <div>
+                        <img src="asserts/imges/hibernete.jpg" rel="hibernete Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/figma%20Logo.png" rel="figma Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/GitHub-Logo.png" rel="GitHub Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/Gimp.png" rel="Gimp Editer Logo">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/javascript.png" rel="Javascript Logo">
+                    </div>
+                </section>
+        </section>
+        <section>
+                <header>
+                    <h1 id="services">Services <i class="fa-solid fa-earth-asia"></i></h1>
+                </header>
+                <section>
+                    <div>
+                        <img src="asserts/imges/service1.png" rel="Enterprise Appliction">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/Service2.png" rel="Web Designing">
+                    </div>
+                    <div>
+                        <img src="asserts/imges/service3.png" rel="UI/UX Designing">
+                    </div>
+                </section>
+        </section>
+        <section>
+                <header>
+                    <h1 id="activities">Activities <i class="fas fa-chart-line"></i></h1>
+                </header>
+                <section></section>
+        </section>
+        <section>
+                <header>
+                    <h1 id="gallery">Gallery <i class="fa-solid fa-images"></i></h1>
+                </header>
+                <section></section>
+        </section>
+        <section>
+                <header>
+                    <h1 id="contactMe">Contact Me <i class="fa-solid fa-headphones"></i></h1>
+                </header>
+                <section></section>
+        </section>
+        <a href="#heder"><div><img src="asserts/images/arrow.png"></div></a>
     </main>
     </body>
 </html>
