Add CSS case 05 final

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
     <header id="heder">
-        <img src="asserts/imges/MyLogo.png">
+        <img src="asserts/images/MyLogo.png">
         <nav>
             <ul>
                 <li><a href="#aboutme"><i class="fa-solid fa-address-card"></i>About Me</a></li>
@@ -30,7 +30,7 @@
     </header>
     <main>
         <section>
-            <img src="asserts/imges/Full%20_Cover.png">
+            <img src="asserts/images/Full%20_Cover.png">
         </section>
         <section>
             <header>
@@ -54,36 +54,36 @@
             </header>
                 <section>
                     <div>
-                        <img src="asserts/imges/java.png" rel="Java Logo">
+                        <img src="asserts/images/java.png" rel="Java Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/MySql.png" rel="mySQL Logo">
+                        <img src="asserts/images/MySql.png" rel="mySQL Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/HTML.png" rel="HTML Logo">
+                        <img src="asserts/images/HTML.png" rel="HTML Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/CSS.png" rel="CSS Logo">
+                        <img src="asserts/images/CSS.png" rel="CSS Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/intellij-idea.png" rel="intellij-idea Logo">
+                        <img src="asserts/images/intellij-idea.png" rel="intellij-idea Logo">
                     </div>
                 </section>
                 <section>
                     <div>
-                        <img src="asserts/imges/hibernete.jpg" rel="hibernete Logo">
+                        <img src="asserts/images/hibernete.jpg" rel="hibernete Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/figma%20Logo.png" rel="figma Logo">
+                        <img src="asserts/images/figma%20Logo.png" rel="figma Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/GitHub-Logo.png" rel="GitHub Logo">
+                        <img src="asserts/images/GitHub-Logo.png" rel="GitHub Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/Gimp.png" rel="Gimp Editer Logo">
+                        <img src="asserts/images/Gimp.png" rel="Gimp Editer Logo">
                     </div>
                     <div>
-                        <img src="asserts/imges/javascript.png" rel="Javascript Logo">
+                        <img src="asserts/images/javascript.png" rel="Javascript Logo">
                     </div>
                 </section>
         </section>
@@ -93,13 +93,13 @@
                 </header>
                 <section>
                     <div>
-                        <img src="asserts/imges/service1.png" rel="Enterprise Appliction">
+                        <img src="asserts/images/service1.png" rel="Enterprise Appliction">
                     </div>
                     <div>
-                        <img src="asserts/imges/Service2.png" rel="Web Designing">
+                        <img src="asserts/images/Service2.png" rel="Web Designing">
                     </div>
                     <div>
-                        <img src="asserts/imges/service3.png" rel="UI/UX Designing">
+                        <img src="asserts/images/service3.png" rel="UI/UX Designing">
                     </div>
                 </section>
         </section>
