--- a/assigments/CSS/case_5/case_5.html
+++ b/assigments/CSS/case_5/case_5.html
@@ -2,18 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS case 04</title>
+    <title>CSS case 05</title>
     <style>
         main>section{
-            border: 2px solid black;
             width: 98vw;
             height: 100vh;
             display: grid;
             grid-template-rows: repeat(3,1fr);
             grid-template-columns: repeat(4,1fr);
+            gap: 9px;
         }
         main>section>div{
-            border: 1px solid red;
             background-size: cover;
         }
         main>section>div>img{
