--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>My-Portfoliyo</title>
-        <link rel="icon" href="asserts/imges/MyLogo.png">
+        <link rel="icon" href="asserts/images/MyLogo.png">
         <meta name="keyword" content="Chathuranga Dilshan,about Chathuranga Dilshan">
         <meta name="description" content="This my web site. i try give you some idea about my self">
         <meta name="author" content="Chathuranga Dilshan">
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width initial-scale=1 maximum-scale=1 minimum scale=1 user-scalable=no" >
         <meta name="theme-color" content="blue">
         <link rel="stylesheet" href="asserts/CSS/stylesheet.css">
-        <link rel="stylesheet" href="asserts/CSS/normalize.css">
+        <link rel="stylesheet" href="asserts/CSS/normalize.css"><link rel="stylesheet" href="asserts/CSS/stylesheet.css">
         <link rel="stylesheet" href="asserts/fonts/css/all.min.css">
     </head>
     <body>
@@ -113,7 +113,14 @@
                 <header>
                     <h1 id="gallery">Gallery <i class="fa-solid fa-images"></i></h1>
                 </header>
-                <section></section>
+                <section>
+                    <div></div>
+                    <div>2</div>
+                    <div>3</div>
+                    <div>4</div>
+                    <div>5</div>
+                    <div>6</div>
+                </section>
         </section>
         <section>
                 <header>
