add Contact Details

--- a/index.html
+++ b/index.html
@@ -115,20 +115,59 @@
                 </header>
                 <section>
                     <div></div>
-                    <div>2</div>
-                    <div>3</div>
-                    <div>4</div>
-                    <div>5</div>
-                    <div>6</div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </section>
         </section>
-        <section>
-                <header>
-                    <h1 id="contactMe">Contact Me <i class="fa-solid fa-headphones"></i></h1>
-                </header>
-                <section></section>
+        <section id="contactMe">
+            <h3>Contact Me</h3>
+            <section>
+                <div></div>
+                <p>
+                    No.103/2,<br>
+                    Pinhena Colony,<br>
+                    Padagoda,<br>
+                    Beruwala,<br>
+                    Kaluthra,<br>
+                    Sri Lanka.
+                </p>
+                <section>
+                    <a href="#"><div></div></a>
+                    <a href="#"><div></div></a>
+                    <a href="#"><div></div></a>
+                    <a href="#"><div></div></a>
+                </section>
+                <section>
+                    <a href="https://github.com/dilshan10" target="_blank"><div></div></a>
+                    <a href="https://www.linkedin.com/in/chathuranga-dilshan-9a709a244/" target="_blank"><div></div></a>
+                    <a href="https://www.facebook.com/dilshan.chathuranga.75436" target="_blank"><div></div></a>
+                    <a href="https://www.instagram.com/chathu.ranga.dilshan/" target="_blank"><div></div></a>
+                </section>
+            </section>
+            <section>
+                <form name="Take me a massage" method="post">
+                    <title>Take A Massege</title>
+                    <label for="Email">Your Email:</label><br>
+                    <input type="text" id="Email" name="Email"><br>
+                    <label for="massage">Your Massage:</label><br>
+                    <input type="textA" id="massage" name="Massage" ><br>
+                    <input type="submit" value="Take It">
+                </form>
+            </section>
+            <section>
+                <div>
+
+                </div>
+                <p>Copyright 2022 .Chathuranga Dilshan. All Rights Reserved. MIT License.</p>
+            </section>
         </section>
-        <a href="#heder"><div><img src="asserts/images/arrow.png"></div></a>
+        <a href="#heder"><div></div></a>
     </main>
+    <footer>
+        <div></div>
+    </footer>
     </body>
 </html>
