add Take A Massage to Me Option

--- a/index.html
+++ b/index.html
@@ -53,38 +53,18 @@
                 <h1 id="skill">Skill <i class="fas fa-brain"></i></h1>
             </header>
                 <section>
-                    <div>
-                        <img src="asserts/images/java.png" rel="Java Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/MySql.png" rel="mySQL Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/HTML.png" rel="HTML Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/CSS.png" rel="CSS Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/intellij-idea.png" rel="intellij-idea Logo">
-                    </div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </section>
                 <section>
-                    <div>
-                        <img src="asserts/images/hibernete.jpg" rel="hibernete Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/figma%20Logo.png" rel="figma Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/GitHub-Logo.png" rel="GitHub Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/Gimp.png" rel="Gimp Editer Logo">
-                    </div>
-                    <div>
-                        <img src="asserts/images/javascript.png" rel="Javascript Logo">
-                    </div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </section>
         </section>
         <section>
@@ -92,15 +72,9 @@
                     <h1 id="services">Services <i class="fa-solid fa-earth-asia"></i></h1>
                 </header>
                 <section>
-                    <div>
-                        <img src="asserts/images/service1.png" rel="Enterprise Appliction">
-                    </div>
-                    <div>
-                        <img src="asserts/images/Service2.png" rel="Web Designing">
-                    </div>
-                    <div>
-                        <img src="asserts/images/service3.png" rel="UI/UX Designing">
-                    </div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
                 </section>
         </section>
         <section>
@@ -148,19 +122,19 @@
                 </section>
             </section>
             <section>
-                <form name="Take me a massage" method="post">
-                    <title>Take A Massege</title>
-                    <label for="Email">Your Email:</label><br>
-                    <input type="text" id="Email" name="Email"><br>
-                    <label for="massage">Your Massage:</label><br>
-                    <input type="textA" id="massage" name="Massage" ><br>
-                    <input type="submit" value="Take It">
+                <form method="post">
+                    <fieldset>
+                        <legend>Take A Massage</legend>
+                        <label for="Email">Your Email :</label><br>
+                        <input type="email" id="Email"><br>
+                        <label for="Massage">Massage</label><br>
+                        <textarea id="Massage"></textarea><br>
+                        <button type="submit">Take It</button>
+                    </fieldset>
                 </form>
             </section>
             <section>
-                <div>
-
-                </div>
+                <div></div>
                 <p>Copyright 2022 .Chathuranga Dilshan. All Rights Reserved. MIT License.</p>
             </section>
         </section>
