Refactor the Responsive

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             </section>
         </section>
         <a href="#heder"><div></div></a>
+        <div></div>
     </main>
     <footer>
         <div></div>
