--- a/index.html
+++ b/index.html
@@ -81,7 +81,11 @@
                 <header>
                     <h1 id="activities">Activities <i class="fas fa-chart-line"></i></h1>
                 </header>
-                <section></section>
+                <section>
+                    <a href="assi.html" target="_blank"><div></div></a>
+                    <a href="projects.html" target="_blank"><div></div></a>
+                    <a href="#" target="_blank"><div></div></a>
+                </section>
         </section>
         <section>
                 <header>
@@ -109,7 +113,7 @@
                     Sri Lanka.
                 </p>
                 <section>
-                    <a href="#"><div></div></a>
+                    <a href="tel:+94754313114"><div></div></a>
                     <a href="#"><div></div></a>
                     <a href="#"><div></div></a>
                     <a href="#"><div></div></a>
@@ -139,7 +143,7 @@
             </section>
         </section>
         <a href="#heder"><div></div></a>
-        <div></div>
+        <a href="tel:+94754313114"><div><i class="fa-solid fa-phone"></i></div></a>
     </main>
     <footer>
         <div></div>
