--- a/assi.html
+++ b/assi.html
@@ -7,17 +7,56 @@
         header{
             background: #73A24E;
             height: 7vh;
-            width: 980vw;
+            width: 98vw;
         }
         main {
             height: 87vh;
-            width: 980vw;
+            width: 98vw;
         }
         main>section:nth-child(1)>header{
             height: 5vh;
         }
-        main>section:nth-child(1)>section>header:nth-child(1){
+        main>section:nth-child(1)>section>header:nth-child(1) {
             height: 3vh;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2){
+            display: flex;
+            justify-content: space-around;
+        }
+        main>section:nth-child(1)>section:nth-child(2)>section:nth-child(2)>a>div{
+            height: 50px;
+            width: 100px;
+            border: #0325ff solid 2px;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            margin-top: 4vh;
+        }
+        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2){
+            display: flex;
+            justify-content: space-around;
+        }
+        main>section:nth-child(1)>section:nth-child(3)>section:nth-child(2)>a>div{
+            height: 50px;
+            width: 100px;
+            border: #0325ff solid 2px;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            margin-top: 4vh;
+        }
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2){
+            display: flex;
+            justify-content: space-around;
+        }
+        main>section:nth-child(1)>section:nth-child(4)>section:nth-child(2)>a>div{
+            height: 50px;
+            width: 100px;
+            border: #0325ff solid 2px;
+            align-items: center;
+            justify-content: center;
+            display: flex;
+            margin-top: 4vh;
         }
         footer{
             background: #73A24E;
@@ -42,19 +81,34 @@
                 <header>
                     <h4>CSS-Basics</h4>
                 </header>
-                <section></section>
+                <section>
+                    <a href="assigments/CSS/Basics/case_1/case_1.html" target="_parent"><div>Case 01</div></a>
+                    <a href="assigments/CSS/Basics/case_2/case_2.html" target="_parent"><div>Case 02</div></a>
+                    <a href="assigments/CSS/Basics/case_3/case_3.html" target="_parent"><div>Case 03</div></a>
+                    <a href="assigments/CSS/Basics/case_4/case_4.html" target="_parent"><div>Case 04</div></a>
+                    <a href="assigments/CSS/Basics/case_5/case_5.html" target="_parent"><div>Case 05</div></a>
+                    <a href="assigments/CSS/Basics/case_6/case_6.html" target="_parent"><div>Case 06</div></a>
+                </section>
             </section>
             <section>
                 <header>
                     <h4>CSS-Transitions</h4>
                 </header>
-                <section></section>
+                <section>
+                    <a href="assigments/CSS/Transitions/case_1/case_1.html" target="_parent"><div>Case 01</div></a>
+                    <a href="assigments/CSS/Transitions/case_2/case_2.html" target="_parent"><div>Case 02</div></a>
+                </section>
             </section>
             <section>
                 <header>
                     <h4>CSS-Animations</h4>
                 </header>
-                <section></section>
+                <section>
+                    <a href="assigments/CSS/Animations/case_1/case_1.html" target="_parent"><div>Case 01</div></a>
+                    <a href="assigments/CSS/Animations/case_2/case_2.html" target="_parent"><div>Case 02</div></a>
+                    <a href="assigments/CSS/Animations/case_3/case_3.html" target="_parent"><div>Case 03</div></a>
+                    <a href="assigments/CSS/Animations/case_4/case_4.html" target="_parent"><div>Case 04</div></a>
+                </section>
             </section>
         </section>
     </main>
